# py-prompt-injection-2025

./: .env.example  .gitignore  404.html  README.md  app.py  index.html  mkdocs.yml  mlflow.db  pyproject.toml  sitemap.xml  test_apos.py  tree.txt
.github/workflows/: docs.yml
architecture/: index.html
cli/: index.html
contributing/: index.html
docs/: architecture.md  cli.md  contributing.md  index.md  owasp.md  payloads.md  phase2-findings.html  roadmap.md
llm_probe_2025/: config.py  exceptions.py  schemas.py
llm_probe_2025/adapters/: anthropic_adapter.py  base.py  factory.py  ollama_adapter.py
llm_probe_2025/cli/: main.py
llm_probe_2025/payloads/: loader.py
llm_probe_2025/payloads/catalog/: llm01_prompt_injection.yaml  llm02_sensitive_info_disclosure.yaml  llm05_improper_output_handling.yaml  llm06_excessive_agency.yaml  llm07_system_prompt_leakage.yaml
llm_probe_2025/reporting/: reporter.py
llm_probe_2025/reporting/templates/: report.html.j2
llm_probe_2025/runner/: runner.py
llm_probe_2025/scoring/: engine.py  heuristics.py
owasp/: index.html
payloads/: index.html
roadmap/: index.html
search/: search_index.json
tests/: test_suite.py
