[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-probe-2025"
version = "0.1.0"
description = "Black-box LLM security evaluation harness for OWASP LLM Top 10 2025"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "loguru>=0.7",
    "mlflow>=2.12",
    "anthropic>=0.25",
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "langchain-community>=0.2",
    "langchain-ollama>=0.1",
    "jinja2>=3.1",
    "weasyprint>=62.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[project.scripts]
llm-probe-2025 = "llm_probe_2025.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_probe_2025*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=llm_probe_2025 --cov-report=term-missing"
